2005-04-02  Jim Evins <evins@snaught.com>

	* docs/libglabels/libglabels-sections.txt:
	* docs/libglabels/libglabels-undocumented.txt:
	* docs/libglabels/tmpl/enums.sgml:
	* docs/libglabels/tmpl/paper.sgml:
	* docs/libglabels/tmpl/xml-paper.sgml:
	* docs/libglabels/tmpl/xml-template.sgml:
	* libglabels/enums.h:
	* libglabels/paper.c: (gl_paper_dup):
	* libglabels/paper.h:
	* libglabels/xml-paper.c:
	* libglabels/xml-template.c:
		More documentation updates for libglabels.
	
2005-03-23  Jim Evins  <evins@snaught.com>

	* INSTALL:
		Automatically updated.
	* Makefile.am:
	* autogen.sh:
	* configure.in:
	* docs/Makefile.am:
	* docs/libglabels/Makefile.am:
	* docs/libglabels/libglabels-docs.sgml:
	* docs/libglabels/libglabels-sections.txt:
	* docs/libglabels/libglabels-undocumented.txt:
	* docs/libglabels/tmpl/enums.sgml:
	* docs/libglabels/tmpl/libglabels-unused.sgml:
	* docs/libglabels/tmpl/libglabels.sgml:
	* docs/libglabels/tmpl/paper.sgml:
	* docs/libglabels/tmpl/template.sgml:
	* docs/libglabels/tmpl/xml-paper.sgml:
	* docs/libglabels/tmpl/xml-template.sgml:
	* docs/libglabels/tmpl/xml.sgml:
		Added basic gtk-doc stuff to support documenting libglabels
		API.
	* libglabels/xml.c:
		Updated function comments with gtk-doc markup.
	* missing:
		Removed.

2005-03-22  Jim Evins  <evins@snaught.com>

	Since the development version now requires gtk-2.6/gnome-2.10, I
	have made a first pass at removing deprecations.

	* configure.in:
	* libglabels/Makefile.am:
	* src/Makefile.am:
		Added configure option to turn on X_DISABLE_DEPRECATED flags.
		Also removed all remnants of HAVE_FILECHOOSER.
	* src/file.c: (gl_file_open_real):
		Removed code for old GtkFileSelection.
	* libglabels/libglabels-private.h:
	* libglabels/paper.c:
	* libglabels/template.c:
	* libglabels/xml-paper.c:
	* libglabels/xml-template.c:
	* libglabels/xml.c:
	* src/bc.c:
	* src/file.c:
	* src/glabels-batch.c:
	* src/glabels.c:
	* src/label.c:
	* src/merge-init.c:
	* src/merge-properties-dialog.c: